Added openapi documentation for statistics
