# services/data-hub/src/routes/data/controller.ts
@@ -444,10 +444,12 @@ export default class DataController {
 
           ctx.status = 200;
           ctx.body = {
-            scores,
-            duplicateCount: allDuplicates.length,
-            subsetCount: allSubsets.length,
-            uniqueCount
+            data: {
+              scores,
+              duplicateCount: allDuplicates.length,
+              subsetCount: allSubsets.length,
+              uniqueCount
+            }
           };
         }
 }
